new executable to practice with threads

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ add_library(${PROJECT_NAME}_box src/Box.cpp)
 
 ##### Executables #####
 add_executable(${PROJECT_NAME}_main
-    src/main.cpp
+    src/nodes/main.cpp
 )
 target_link_libraries(${PROJECT_NAME}_main
     ${PROJECT_NAME}_singleton
@@ -27,6 +27,20 @@ add_dependencies(${PROJECT_NAME}_main
     ${PROJECT_NAME}_box
 )
 
+add_executable(${PROJECT_NAME}_concurrency_main
+    src/nodes/concurrency_main.cpp
+)
+target_link_libraries(${PROJECT_NAME}_concurrency_main
+    ${PROJECT_NAME}_singleton
+    ${PROJECT_NAME}_box
+)
+add_dependencies(${PROJECT_NAME}_concurrency_main
+    ${PROJECT_NAME}_singleton
+    ${PROJECT_NAME}_box
+)
+
 ##### Install #####
 install(TARGETS ${PROJECT_NAME}_main
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(TARGETS ${PROJECT_NAME}_concurrency_main
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
